@@ -17,55 +17,184 @@
 package se.llbit.chunky.model;
 
 import se.llbit.chunky.resources.Texture;
+import se.llbit.chunky.world.BlockData;
 import se.llbit.math.Quad;
 import se.llbit.math.Ray;
 import se.llbit.math.Vector3;
 import se.llbit.math.Vector4;
 
 public class BedModel {
+  // Facing south.
   private static Quad[] foot = {
-      // end
-      new Quad(new Vector3(1, 0, 0), new Vector3(0, 0, 0), new Vector3(1, .5, 0),
-          new Vector4(1, 0, 0, .5)),
-
-      // right side
-      new Quad(new Vector3(0, 0, 0), new Vector3(0, 0, 1), new Vector3(0, .5, 0),
-          new Vector4(0, 1, 0, .5)),
-
-      // left side
-      new Quad(new Vector3(1, 0, 1), new Vector3(1, 0, 0), new Vector3(1, .5, 1),
-          new Vector4(1, 0, 0, .5)),
-
-      // top
-      new Quad(new Vector3(1, .5, 0), new Vector3(0, .5, 0), new Vector3(1, .5, 1),
-          new Vector4(1, 0, 0, 1)),
-
-      // bottom
-      new Quad(new Vector3(0, .25, 0), new Vector3(1, .25, 0), new Vector3(0, .25, 1),
-          new Vector4(0, 1, 0, 1)),};
+      // Mattress:
+      new Quad(
+          new Vector3(0, 9 / 16.0, 16 / 16.0),
+          new Vector3(16 / 16.0, 9 / 16.0, 16 / 16.0),
+          new Vector3(0, 9 / 16.0, 0),
+          new Vector4(6 / 64.0, 22 / 64.0, 36 / 64.0, 20 / 64.0)),
+      new Quad(
+          new Vector3(0, 3 / 16.0, 0),
+          new Vector3(16 / 16.0, 3 / 16.0, 0),
+          new Vector3(0, 3 / 16.0, 16 / 16.0),
+          new Vector4(28 / 64.0, 44 / 64.0, 20 / 64.0, 36 / 64.0)),
+      new Quad(
+          new Vector3(16 / 16.0, 9 / 16.0, 16 / 16.0),
+          new Vector3(16 / 16.0, 3 / 16.0, 16 / 16.0),
+          new Vector3(16 / 16.0, 9 / 16.0, 0),
+          new Vector4(6 / 64.0, 0, 36 / 64.0, 20 / 64.0)),
+      new Quad(
+          new Vector3(0, 3 / 16.0, 16 / 16.0),
+          new Vector3(0, 9 / 16.0, 16 / 16.0),
+          new Vector3(0, 3 / 16.0, 0),
+          new Vector4(28 / 64.0, 22 / 64.0, 36 / 64.0, 20 / 64.0)),
+      new Quad(
+          new Vector3(16 / 16.0, 3 / 16.0, 0),
+          new Vector3(0, 3 / 16.0, 0),
+          new Vector3(16 / 16.0, 9 / 16.0, 0),
+          new Vector4(22 / 64.0, 38 / 64.0, 42 / 64.0, 36 / 64.0)),
+      // cube3
+      new Quad(
+          new Vector3(16 / 16.0, 0, 3 / 16.0),
+          new Vector3(13 / 16.0, 0, 3 / 16.0),
+          new Vector3(16 / 16.0, 0, 0),
+          new Vector4(56 / 64.0, 59 / 64.0, 52 / 64.0, 49 / 64.0)),
+      new Quad(
+          new Vector3(16 / 16.0, 0, 3 / 16.0),
+          new Vector3(16 / 16.0, 0, 0),
+          new Vector3(16 / 16.0, 3 / 16.0, 3 / 16.0),
+          new Vector4(50 / 64.0, 53 / 64.0, 49 / 64.0, 46 / 64.0)),
+      new Quad(
+          new Vector3(13 / 16.0, 0, 0),
+          new Vector3(13 / 16.0, 0, 3 / 16.0),
+          new Vector3(13 / 16.0, 3 / 16.0, 0),
+          new Vector4(56 / 64.0, 59 / 64.0, 49 / 64.0, 46 / 64.0)),
+      new Quad(
+          new Vector3(16 / 16.0, 0, 0),
+          new Vector3(13 / 16.0, 0, 0),
+          new Vector3(16 / 16.0, 3 / 16.0, 0),
+          new Vector4(53 / 64.0, 56 / 64.0, 49 / 64.0, 46 / 64.0)),
+      new Quad(
+          new Vector3(13 / 16.0, 0, 3 / 16.0),
+          new Vector3(16 / 16.0, 0, 3 / 16.0),
+          new Vector3(13 / 16.0, 3 / 16.0, 3 / 16.0),
+          new Vector4(59 / 64.0, 62 / 64.0, 49 / 64.0, 46 / 64.0)),
+      // cube2
+      new Quad(
+          new Vector3(3 / 16.0, 0, 0),
+          new Vector3(3 / 16.0, 0, 3 / 16.0),
+          new Vector3(0, 0, 0),
+          new Vector4(56 / 64.0, 59 / 64.0, 52 / 64.0, 49 / 64.0)),
+      new Quad(
+          new Vector3(3 / 16.0, 0, 3 / 16.0),
+          new Vector3(3 / 16.0, 0, 0),
+          new Vector3(3 / 16.0, 3 / 16.0, 3 / 16.0),
+          new Vector4(59 / 64.0, 62 / 64.0, 49 / 64.0, 46 / 64.0)),
+      new Quad(
+          new Vector3(0, 0, 0),
+          new Vector3(0, 0, 3 / 16.0),
+          new Vector3(0, 3 / 16.0, 0),
+          new Vector4(53 / 64.0, 56 / 64.0, 49 / 64.0, 46 / 64.0)),
+      new Quad(
+          new Vector3(3 / 16.0, 0, 0),
+          new Vector3(0, 0, 0),
+          new Vector3(3 / 16.0, 3 / 16.0, 0),
+          new Vector4(50 / 64.0, 53 / 64.0, 49 / 64.0, 46 / 64.0)),
+      new Quad(
+          new Vector3(0, 0, 3 / 16.0),
+          new Vector3(3 / 16.0, 0, 3 / 16.0),
+          new Vector3(0, 3 / 16.0, 3 / 16.0),
+          new Vector4(56 / 64.0, 59 / 64.0, 49 / 64.0, 46 / 64.0)),
+  };
 
   private static Quad[] head = {
-      // end
-      new Quad(new Vector3(0, 0, 1), new Vector3(1, 0, 1), new Vector3(0, .5, 1),
-          new Vector4(0, 1, 0, .5)),
-
-      // right side
-      new Quad(new Vector3(0, 0, 0), new Vector3(0, 0, 1), new Vector3(0, .5, 0),
-          new Vector4(0, 1, 0, .5)),
-
-      // left side
-      new Quad(new Vector3(1, 0, 1), new Vector3(1, 0, 0), new Vector3(1, .5, 1),
-          new Vector4(1, 0, 0, .5)),
-
-      // top
-      new Quad(new Vector3(1, .5, 0), new Vector3(0, .5, 0), new Vector3(1, .5, 1),
-          new Vector4(1, 0, 0, 1)),
-
-      // bottom
-      new Quad(new Vector3(0, .25, 0), new Vector3(1, .25, 0), new Vector3(0, .25, 1),
-          new Vector4(0, 1, 0, 1)),};
+      // Mattress:
+      new Quad(
+          new Vector3(0, 9 / 16.0, 16 / 16.0),
+          new Vector3(16 / 16.0, 9 / 16.0, 16 / 16.0),
+          new Vector3(0, 9 / 16.0, 0),
+          new Vector4(6 / 64.0, 22 / 64.0, 58 / 64.0, 42 / 64.0)),
+      new Quad(
+          new Vector3(0, 3 / 16.0, 0),
+          new Vector3(16 / 16.0, 3 / 16.0, 0),
+          new Vector3(0, 3 / 16.0, 16 / 16.0),
+          new Vector4(28 / 64.0, 44 / 64.0, 58 / 64.0, 42 / 64.0)),
+      new Quad(
+          new Vector3(16 / 16.0, 9 / 16.0, 16 / 16.0),
+          new Vector3(16 / 16.0, 3 / 16.0, 16 / 16.0),
+          new Vector3(16 / 16.0, 9 / 16.0, 0),
+          new Vector4(6 / 64.0, 0 / 64.0, 58 / 64.0, 42 / 64.0)),
+      new Quad(
+          new Vector3(0, 3 / 16.0, 16 / 16.0),
+          new Vector3(0, 9 / 16.0, 16 / 16.0),
+          new Vector3(0, 3 / 16.0, 0),
+          new Vector4(0 / 64.0, 6 / 64.0, 58 / 64.0, 42 / 64.0)),
+      new Quad(
+          new Vector3(0, 3 / 16.0, 16 / 16.0),
+          new Vector3(16 / 16.0, 3 / 16.0, 16 / 16.0),
+          new Vector3(0, 9 / 16.0, 16 / 16.0),
+          new Vector4(6 / 64.0, 22 / 64.0, 64 / 64.0, 58 / 64.0)),
+      // cube2
+      new Quad(
+          new Vector3(0, 0, 13 / 16.0),
+          new Vector3(3 / 16.0, 0, 13 / 16.0),
+          new Vector3(0, 0, 16 / 16.0),
+          new Vector4(56 / 64.0, 59 / 64.0, 61 / 64.0, 64 / 64.0)),
+      new Quad(
+          new Vector3(3 / 16.0, 0, 16 / 16.0),
+          new Vector3(3 / 16.0, 0, 13 / 16.0),
+          new Vector3(3 / 16.0, 3 / 16.0, 16 / 16.0),
+          new Vector4(56 / 64.0, 59 / 64.0, 58 / 64.0, 61 / 64.0)),
+      new Quad(
+          new Vector3(0, 0, 13 / 16.0),
+          new Vector3(0, 0, 16 / 16.0),
+          new Vector3(0, 3 / 16.0, 13 / 16.0),
+          new Vector4(50 / 64.0, 53 / 64.0, 58 / 64.0, 61 / 64.0)),
+      new Quad(
+          new Vector3(3 / 16.0, 0, 13 / 16.0),
+          new Vector3(0, 0, 13 / 16.0),
+          new Vector3(3 / 16.0, 3 / 16.0, 13 / 16.0),
+          new Vector4(59 / 64.0, 62 / 64.0, 58 / 64.0, 61 / 64.0)),
+      new Quad(
+          new Vector3(0, 0, 16 / 16.0),
+          new Vector3(3 / 16.0, 0, 16 / 16.0),
+          new Vector3(0, 3 / 16.0, 16 / 16.0),
+          new Vector4(53 / 64.0, 56 / 64.0, 58 / 64.0, 61 / 64.0)),
+      // cube3
+      new Quad(
+          new Vector3(13 / 16.0, 0, 13 / 16.0),
+          new Vector3(16 / 16.0, 0, 13 / 16.0),
+          new Vector3(13 / 16.0, 0, 16 / 16.0),
+          new Vector4(56 / 64.0, 59 / 64.0, 61 / 64.0, 64 / 64.0)),
+      new Quad(
+          new Vector3(16 / 16.0, 0, 16 / 16.0),
+          new Vector3(16 / 16.0, 0, 13 / 16.0),
+          new Vector3(16 / 16.0, 3 / 16.0, 16 / 16.0),
+          new Vector4(53 / 64.0, 56 / 64.0, 58 / 64.0, 61 / 64.0)),
+      new Quad(
+          new Vector3(13 / 16.0, 0, 13 / 16.0),
+          new Vector3(13 / 16.0, 0, 16 / 16.0),
+          new Vector3(13 / 16.0, 3 / 16.0, 13 / 16.0),
+          new Vector4(59 / 64.0, 62 / 64.0, 58 / 64.0, 61 / 64.0)),
+      new Quad(
+          new Vector3(16 / 16.0, 0, 13 / 16.0),
+          new Vector3(13 / 16.0, 0, 13 / 16.0),
+          new Vector3(16 / 16.0, 3 / 16.0, 13 / 16.0),
+          new Vector4(56 / 64.0, 59 / 64.0, 58 / 64.0, 61 / 64.0)),
+      new Quad(
+          new Vector3(13 / 16.0, 0, 16 / 16.0),
+          new Vector3(16 / 16.0, 0, 16 / 16.0),
+          new Vector3(13 / 16.0, 3 / 16.0, 16 / 16.0),
+          new Vector4(50 / 64.0, 53 / 64.0, 58 / 64.0, 61 / 64.0)),
+   };
 
   private static Quad[][][] rot = new Quad[2][4][];
+
+  private static Texture[] texture = {
+      Texture.bedWhite, Texture.bedOrange, Texture.bedMagenta, Texture.bedLightBlue,
+      Texture.bedYellow, Texture.bedLime, Texture.bedPink, Texture.bedGray, Texture.bedSilver,
+      Texture.bedCyan, Texture.bedPurple, Texture.bedBlue, Texture.bedBrown, Texture.bedGreen,
+      Texture.bedRed, Texture.bedBlack
+  };
 
   static {
     rot[0][0] = foot;
@@ -81,31 +210,13 @@ public class BedModel {
     boolean hit = false;
     int isHead = (ray.getBlockData() >> 3) & 1;
     int angle = ray.getBlockData() & 3;
+    int bedColor = 0xF & (ray.getCurrentData() >> BlockData.BED_COLOR);
 
     ray.t = Double.POSITIVE_INFINITY;
 
     for (Quad quad : rot[isHead][angle]) {
       if (quad.intersect(ray)) {
-        float[] color;
-        if (isHead == 1) {
-          if (quad == rot[isHead][angle][3])
-            color = Texture.bedHeadTop.getColor(ray.v, ray.u);
-          else if (quad == rot[isHead][angle][4])
-            color = Texture.oakPlanks.getColor(ray.u, ray.v);
-          else if (quad == rot[isHead][angle][0])
-            color = Texture.bedHeadEnd.getColor(ray.u, ray.v);
-          else
-            color = Texture.bedHeadSide.getColor(ray.u, ray.v);
-        } else {
-          if (quad == rot[isHead][angle][3])
-            color = Texture.bedFootTop.getColor(ray.v, ray.u);
-          else if (quad == rot[isHead][angle][4])
-            color = Texture.oakPlanks.getColor(ray.u, ray.v);
-          else if (quad == rot[isHead][angle][0])
-            color = Texture.bedFootEnd.getColor(ray.u, ray.v);
-          else
-            color = Texture.bedFootSide.getColor(ray.u, ray.v);
-        }
+        float[] color = texture[bedColor].getColor(ray.u, ray.v);
         if (color[3] > Ray.EPSILON) {
           ray.color.set(color);
           ray.n.set(quad.n);
