@@ -1,5 +1,6 @@
 1.4.4 - TBD
 
+* Improve bed rendering for Minecraft 1.12 (colored beds).
 * Y clipping is now a per-scene setting, with an upper clip value.
 * The Y clip planes now cull non-player entities.
 
